syntax = "proto3";

service CatalogService {
  rpc CheckProductExistence (ProductIdRequest) returns (ProductExistenceResponse);
}

message ProductIdRequest {
  int32 product_id = 1;
}

message ProductExistenceResponse {
  bool exists = 1;
}